gitlab/gitlab-ce_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlabce-gitlab-ce
    chart: gitlab-ce-0.2.1
    heritage: Tiller
    release: gitlabce
  name: gitlabce-gitlab-ce-svc
  namespace: cicd
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gitlabce-gitlab-ce
  sessionAffinity: None
  type: ClusterIP
